apps/monitoring/uptime-kuma/overlays/dev/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:YrczHkAQFM8au0aGzS/p2+ZVHBuUkUW/zw8jIv8=,iv:57djkSvQ4/d6lqhV5LMZQQ84PkhdPV2WH8llQqxRVik=,tag:usyxfvgoD7b2gpn3Tyx30w==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: uptime-kuma
    name: uptime-kuma
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:2UuLaoqrF/EpCNkUxFBHCQ9zFShHEv+x+1JisIV+fgVJrLhUNUREDxS8XBw=,iv:vIjXvlcpxfAaiDVkpRHCLmxnxPk7WWJzNmFZhjf2PeQ=,tag:Y4oY+s8cjT3a7ilgfSEwoA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: uptime-kuma
              port: 3001
    tls:
        domains:
            - main: ENC[AES256_GCM,data:iFcJm2HrTHj40PdzgIbQ9N5Pzth6gNZDCc9maEY=,iv:7wZ1lQBAGrOJEcOE0ubB1dV+iNTJQ7J49rDtdhZZjyQ=,tag:XcI1zt4yaHIEqcKGukh4oQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:TV7f+eH5KRGY9VcuxiCVHOIEuGT+wG0OZvxiTqJa,iv:0QWAOY93oh/xU/b7gRTNNdDAE0wf9QFGl+k9ml4Koe0=,tag:aNAjuhKKxUPBu9QsQKtbFw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: uptime-kuma-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0S1BqT0tKTm82YVJ0THU1
[...]
            91rRd0AAP6RJxZUmF0Oax4oZHOvaeMCNTPijdHto/yAvV5subkO2lg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-24T12:46:40Z"
    mac: ENC[AES256_GCM,data:+myKgeIEC8fjFrDqrejFxqMCPmvmdiOj7QAtVhj4x7QTy9rPwyfEYhJJQce/N3FwVttjmiBh/NUCcFBaFt9VoPgUgVqUYM6Ec0G60P7qGV3bceGU1jqJU4lAxD/Lqj7pIXPNr3fUmQDcyn1T6GCrgcge4B2XxGMkU77iqzj0Ug4=,iv:X9t/BfzPODtj2wure1gFTGbuwdao/VPNLKalxj1HaAw=,tag:/8qfOOo9ftuyQeQKgRm2dw==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:56Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAwgx1mZcn7xu81b4rejL5XdzTAPJT4crvB9/91uzVYAC5
[...]
            =C1pg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
