apps/monitoring/uptime-kuma/overlays/dev/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "10"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`uptime.monitoring.anotherlife.org.pl`)
    middlewares:
    - name: chain-traefik-dashboard
      namespace: traefik
    services:
    - kind: TraefikService
      name: uptime-kuma
      port: 3001
  tls:
    domains:
    - main: monitoring.anotherlife.org.pl
      sans:
      - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-monitoring
